# pulse-court

./: .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  README.md
assets/sprites/: README.md  manifest.json
assets/sprites/animated/: manifest.json
docs/: architecture.md  replay-format.md  rules.md  verification.md
scripts/: clean_idle_sprites.py  clean_sprites.py  create_desktop_shortcut.ps1  run_viewer.ps1
src/apps/: headless_main.cpp  viewer_assets.cpp  viewer_assets.hpp  viewer_monitor.cpp  viewer_monitor.hpp  viewer_win32.cpp
src/core/: fixed_math.cpp  fixed_math.hpp  pulse_replay.cpp  pulse_replay.hpp  pulse_sim.cpp  pulse_sim.hpp
tests/: sim_tests.cpp
